Fix file paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="jerry/css/style.css">
+	<link rel="stylesheet" href="jerry/css/slick.css">
 	<title>Jerry</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
 	<!-- Navigation -->
 	<nav class="site-navigation">
 		<div class="site-navigation-inner site-container">
-			<img src="./images/site-logo.png" alt="site logo">
+			<img src="jerry/images/site-logo.png" alt="site logo">
 		
 			<script>
 				function myFunction(x) {
@@ -34,7 +34,7 @@
 	<section class="fh5co-top-banner">
 		<div class="top-banner__inner site-container">
 			<div class="top-banner__image">
-				<img src="./images/jerry.jfif" alt="author image">
+				<img src="jerry/images/jerry.jfif" alt="author image">
 			</div>
 			<div class="top-banner__text">
 				<div class="top-banner__text-up">
