reverted the change in path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Navigation -->
 	<nav class="site-navigation">
 		<div class="site-navigation-inner site-container">
-			<img src="./images/site-logo.png" alt="site logo">
+			<img src="jerry/images/site-logo.png" alt="site logo">
 		
 			<script>
 				function myFunction(x) {
