--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="about-me-inner site-container">
 			<article class="portfolio-wrapper">
 				<div class="portfolio__img">
-					<img src="./images/jerry 1.jpeg" class="about-me__profile" alt="about me profile picture">
+					<img src="./jerry/images/jerry 1.jpeg" class="about-me__profile" alt="about me profile picture">
 				</div>
 				<div class="portfolio__bottom">
 					<div class="portfolio__name">
