--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<section class="fh5co-top-banner">
 		<div class="top-banner__inner site-container">
 			<div class="top-banner__image">
-				<img src="jerry/images/jerry.jfif" alt="author image">
+				<img src="./jerry/images/jerry.jfif" alt="author image">
 			</div>
 			<div class="top-banner__text">
 				<div class="top-banner__text-up">
