--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Dr. Hu empowers his clients to sharpen their focus, fuel their passion, and elev
 What sets Dr. Hu apart is his unwavering commitment to professional and personal growth, underpinned by science-tested methods that make strategic growth achievable and sustainable. His support goes beyond mere tactics—he helps you foster authentic achievements and inspires lasting transformation.
 
 Having experienced his expertise firsthand, I am confident that partnering with Dr. Hu means you’ll gain more than a coach—you gain a dedicated ally invested in your success. If you’re ready to reach new heights and lead purposefully, I encourage you to connect with Dr. Jerry Hu. He’s exceptional at what he does!”</p>
-					<img src="./images/quotes.svg" alt="quotes svg">
+					<img src=".jerry/images/quotes.svg" alt="quotes svg">
 					<h4>Al Kushner</h4>
 					<!-- <p>Reader</p> -->
 				</div>
