--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Dr. Hu empowers his clients to sharpen their focus, fuel their passion, and elev
 What sets Dr. Hu apart is his unwavering commitment to professional and personal growth, underpinned by science-tested methods that make strategic growth achievable and sustainable. His support goes beyond mere tactics—he helps you foster authentic achievements and inspires lasting transformation.
 
 Having experienced his expertise firsthand, I am confident that partnering with Dr. Hu means you’ll gain more than a coach—you gain a dedicated ally invested in your success. If you’re ready to reach new heights and lead purposefully, I encourage you to connect with Dr. Jerry Hu. He’s exceptional at what he does!”</p>
-					<img src=".jerry/images/quotes.svg" alt="quotes svg">
+					<img src="./jerry/images/quotes.svg" alt="quotes svg">
 					<h4>Al Kushner</h4>
 					<!-- <p>Reader</p> -->
 				</div>
@@ -117,7 +117,7 @@ Our relationship started off interesting; originally Jerry hired me for LinkedIn
 I am an active competitor boxer for USA Boxing, turning professional early ‘25 as well as a 6-figure entrepreneur who is all about “high-performance”, and he has helped me see the brighter side of life and something to look forward to as a man who some day wants to reach the level of success that Jerry has.
 
 I highly, highly, recommend him as a Coach, Mentor, and a friend. He is truly someone who is going to give you the no-bs outlook of life and you WILL be better than you were before after meeting him.”</p>
-					<img src="./images/quotes.svg" alt="quotes svg">
+					<img src="./jerry/images/quotes.svg" alt="quotes svg">
 					<h4>Cody Davis</h4>
 					<!-- <p>Reader</p> -->
 				</div>
@@ -132,10 +132,10 @@ I highly, highly, recommend him as a Coach, Mentor, and a friend. He is truly so
 			<div class="social">
 				<h5>Follow me!!</h5>
 				<div class="social-icons">
-					<a href="#" target="_blank"><img src="./images/social-twitter.png" alt="social icon"></a>
-					<a href="#" target="_blank"><img src="./images/social-pinterest.png" alt="social icon"></a>
-					<a href="#" target="_blank"><img src="./images/social-youtube.png" alt="social icon"></a>
-					<a href="#" target="_blank"><img src="./images/social-twitter.png" alt="social icon"></a>
+					<a href="#" target="_blank"><img src="./jerry/images/social-twitter.png" alt="social icon"></a>
+					<a href="#" target="_blank"><img src="./jerry/images/social-pinterest.png" alt="social icon"></a>
+					<a href="#" target="_blank"><img src="./jerry/images/social-youtube.png" alt="social icon"></a>
+					<a href="#" target="_blank"><img src="./jerry/images/social-twitter.png" alt="social icon"></a>
 				</div>
 				<h5>Share it!</h5>
 			</div>
@@ -149,7 +149,7 @@ I highly, highly, recommend him as a Coach, Mentor, and a friend. He is truly so
 			<div class="footer-inner">
 				<div class="footer-info">
 					<div class="footer-info__left">
-						<img src="./images/footer-img.jpg" alt="about me image">
+						<img src="./jerry/images/footer-img.jpg" alt="about me image">
 						<p>Read more about me</p>
 					</div>
 					<div class="footer-info__right">
@@ -157,10 +157,10 @@ I highly, highly, recommend him as a Coach, Mentor, and a friend. He is truly so
 						<p class="footer-phone">Phone: +1 917 575 8070</p>
 						<p>Email : Jhone@Example.com</p>
 						<div class="social-icons">
-							<a href="#" target="_blank"><img src="./images/social-twitter.png" alt="social icon"></a>
-							<a href="#" target="_blank"><img src="./images/social-pinterest.png" alt="social icon"></a>
-							<a href="#" target="_blank"><img src="./images/social-youtube.png" alt="social icon"></a>
-							<a href="#" target="_blank"><img src="./images/social-twitter.png" alt="social icon"></a>
+							<a href="#" target="_blank"><img src="./jerry/images/social-twitter.png" alt="social icon"></a>
+							<a href="#" target="_blank"><img src="./jerry/images/social-pinterest.png" alt="social icon"></a>
+							<a href="#" target="_blank"><img src="./jerry/images/social-youtube.png" alt="social icon"></a>
+							<a href="#" target="_blank"><img src="./jerry/images/social-twitter.png" alt="social icon"></a>
 						</div>
 					</div>
 				</div>
@@ -181,11 +181,11 @@ I highly, highly, recommend him as a Coach, Mentor, and a friend. He is truly so
 			<div class="site-container footer-bottom-inner">
 				<p>© 2025 Author | Design by <a href="https://samrasheikh25@gmail.com/" target="_blank">samrasheikh25@gmail.com</a> | All rights Reserved.</p>
 				<div class="footer-bottom__img">
-					<img src="./images/footer-mastercard.png" alt="footer image">
-					<img src="./images/footer-paypal.png" alt="footer image">
-					<img src="./images/footer-visa.png" alt="footer image">
-					<img src="./images/footer-fedex.png" alt="footer image">
-					<img src="./images/footer-dhl.png" alt="footer image">
+					<img src="./jerry/images/footer-mastercard.png" alt="footer image">
+					<img src="./jerry/images/footer-paypal.png" alt="footer image">
+					<img src="./jerry/images/footer-visa.png" alt="footer image">
+					<img src="./jerry/images/footer-fedex.png" alt="footer image">
+					<img src="./jerry/images/footer-dhl.png" alt="footer image">
 				</div>
 			</div>
 		</div>
